feat: add recipe filters
