# src/docs/openapi.yml
@@ -421,6 +421,22 @@ paths:
           schema:
             type: string
           required: true
+        - in: query
+          name: q
+          schema:
+            type: string
+        - in: query
+          name: is_favorite
+          schema:
+            type: boolean
+        - in: query
+          name: category
+          schema:
+            type: string
+        - in: query
+          name: max_time
+          schema:
+            type: number
       responses:
         "200":
           description: Successful response
